Migrate the plugin to support java 11